--- a/back/css/MainBeck_style.css
+++ b/back/css/MainBeck_style.css
@@ -221,7 +221,7 @@ body {
 /* ON-AIR */
 .onair {
     height: 940px;
-    padding-top: 200px;
+    padding-top: 180px;
     position: relative;
 }
 
@@ -264,6 +264,7 @@ body {
     /* justify-content: space-between; */
     align-items: center;
     position: relative;
+    padding: 0 100px 0px 0;
 
 }
 
